--- a/kaisenweb/src/main/resources/static/assets/css/carousel.css
+++ b/kaisenweb/src/main/resources/static/assets/css/carousel.css
@@ -271,6 +271,22 @@ body {
 #moveRight6 {
   right: 0;
 }
+#moveLeft7 {
+  left: 0;
+  margin-left: -12px;
+}
+
+#moveRight7 {
+  right: 0;
+}
+#moveLeft8 {
+  left: 0;
+  margin-left: -12px;
+}
+
+#moveRight8 {
+  right: 0;
+}
 @media only screen and (max-width: 1100px) {
   .btn-nav {
     display: none;
