--- a/kaisenweb/src/main/resources/templates/index.html
+++ b/kaisenweb/src/main/resources/templates/index.html
@@ -112,20 +112,7 @@
           <i class="fa-solid fa-caret-left"></i>
         </button>
 
-        <div class="slider" id="mySlider">
-          <div class="movie" id="main" th:each="element : ${MovieTv}">
-            <a>
-              <a class="image" th:href="@{/movie/{id}(id=${element.key})}">
-                <img
-                  loading="lazy"
-                  class="img-mb"
-                  th:src="@{${'https://image.tmdb.org/t/p/w220_and_h330_face/' + element.value}}"
-                  alt=""
-                />
-              </a>
-            </a>
-          </div>
-        </div>
+        <div class="slider" id="mySliderPopolari"></div>
         <button type="button" id="moveRight" class="btn-nav">
           <i class="fa-solid fa-caret-right"></i>
         </button>
@@ -140,7 +127,7 @@
           <i class="fa-solid fa-caret-left"></i>
         </button>
 
-        <div class="slider sl2" id="mySlider">
+        <div class="slider sl2" id="mySliderTrending">
           <div class="movie" id="main2" th:each="element : ${trending}">
             <a class="image" th:href="@{/movie/{id}(id=${element.key})}">
               <img
@@ -166,18 +153,7 @@
           <i class="fa-solid fa-caret-left"></i>
         </button>
 
-        <div class="slider sl3" id="mySlider">
-          <div class="movie" id="main3" th:each="element : ${upComing}">
-            <a class="image" th:href="@{/movie/{id}(id=${element.key})}">
-              <img
-                loading="lazy"
-                class="img-mb"
-                th:src="@{${'https://image.tmdb.org/t/p/w220_and_h330_face/' + element.value}}"
-                alt=""
-              />
-            </a>
-          </div>
-        </div>
+        <div class="slider sl3" id="mySliderUpcoming"></div>
         <button type="button" id="moveRight3" class="btn-nav">
           <i class="fa-solid fa-caret-right"></i>
         </button>
@@ -192,18 +168,7 @@
           <i class="fa-solid fa-caret-left"></i>
         </button>
 
-        <div class="slider sl4" id="mySlider">
-          <div class="movie" id="main4" th:each="element : ${cinema}">
-            <a class="image" th:href="@{/movie/{id}(id=${element.key})}">
-              <img
-                loading="lazy"
-                class="img-mb"
-                th:src="@{${'https://image.tmdb.org/t/p/w220_and_h330_face/' + element.value}}"
-                alt=""
-              />
-            </a>
-          </div>
-        </div>
+        <div class="slider sl4" id="mySliderCinema"></div>
         <button type="button" id="moveRight4" class="btn-nav">
           <i class="fa-solid fa-caret-right"></i>
         </button>
@@ -218,18 +183,7 @@
           <i class="fa-solid fa-caret-left"></i>
         </button>
 
-        <div class="slider sl5" id="mySlider">
-          <div class="movie" id="main5" th:each="element : ${av}">
-            <a class="image" th:href="@{/movie/{id}(id=${element.key})}">
-              <img
-                loading="lazy"
-                class="img-mb"
-                th:src="@{${'https://image.tmdb.org/t/p/w220_and_h330_face/' + element.value}}"
-                alt=""
-              />
-            </a>
-          </div>
-        </div>
+        <div class="slider sl5" id="mySliderAv"></div>
         <button type="button" id="moveRight5" class="btn-nav">
           <i class="fa-solid fa-caret-right"></i>
         </button>
@@ -270,29 +224,7 @@
           <i class="fa-solid fa-caret-left"></i>
         </button>
 
-        <div class="slider sl6 tr" id="mySlider">
-          <div
-            th:classappend="${element.Title}+'/-'+${element.Id}"
-            class="movie film"
-            id="main6"
-            th:each="element : ${traileruscite}"
-          >
-            <a
-              data-bs-toggle="modal"
-              th:classappend="${element.Trailer}"
-              data-bs-target="#staticBackdrop"
-            >
-              <div class="play-icon">
-                <img
-                  class="img-mb trailer"
-                  th:src="@{${'https://image.tmdb.org/t/p/w355_and_h200_multi_faces/'+ element.backdropPath }}"
-                  alt=""
-                />
-                <i class="fa-solid fa-play"></i>
-              </div>
-            </a>
-          </div>
-        </div>
+        <div class="slider sl6 tr" id="mySliderTrailerinarrivo"></div>
 
         <button type="button" id="moveRight6" class="btn-nav">
           <i class="fa-solid fa-caret-right"></i>
@@ -304,29 +236,7 @@
           <i class="fa-solid fa-caret-left"></i>
         </button>
 
-        <div class="slider sl7 tr" id="mySlider">
-          <div
-            th:classappend="${element.Title}+'/-'+${element.Id}"
-            class="movie film"
-            id="main7"
-            th:each="element : ${trailercinema}"
-          >
-            <a
-              data-bs-toggle="modal"
-              th:classappend="${element.Trailer}"
-              data-bs-target="#staticBackdrop"
-            >
-              <div class="play-icon">
-                <img
-                  class="img-mb trailer"
-                  th:src="@{${'https://image.tmdb.org/t/p/w355_and_h200_multi_faces/'+ element.backdropPath }}"
-                  alt=""
-                />
-                <i class="fa-solid fa-play"></i>
-              </div>
-            </a>
-          </div>
-        </div>
+        <div class="slider sl7 tr" id="mySliderTrailercinema"></div>
 
         <button type="button" id="moveRight7" class="btn-nav">
           <i class="fa-solid fa-caret-right"></i>
@@ -338,29 +248,7 @@
           <i class="fa-solid fa-caret-left"></i>
         </button>
 
-        <div class="slider sl8 tr" id="mySlider">
-          <div
-            th:classappend="${element.Title}+'/-'+${element.Id}"
-            class="movie film"
-            id="main8"
-            th:each="element : ${trailerpopolari}"
-          >
-            <a
-              data-bs-toggle="modal"
-              th:classappend="${element.Trailer}"
-              data-bs-target="#staticBackdrop"
-            >
-              <div class="play-icon">
-                <img
-                  class="img-mb trailer"
-                  th:src="@{${'https://image.tmdb.org/t/p/w355_and_h200_multi_faces/'+ element.backdropPath }}"
-                  alt=""
-                />
-                <i class="fa-solid fa-play"></i>
-              </div>
-            </a>
-          </div>
-        </div>
+        <div class="slider sl8 tr" id="mySliderTrailerpopolari"></div>
 
         <button type="button" id="moveRight8" class="btn-nav">
           <i class="fa-solid fa-caret-right"></i>
@@ -432,6 +320,7 @@
       src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"
       crossorigin="anonymous"
     ></script>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
@@ -439,6 +328,7 @@
     ></script>
     <script src="assets/js/carousel.js"></script>
     <script src="assets/js/custom.js"></script>
+    <script src="assets/js/load.js"></script>
     <script src="assets/js/country-states.js"></script>
     <script
       src="https://kit.fontawesome.com/f85002145c.js"
