--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -128,18 +128,7 @@
           <i class="fa-solid fa-caret-left"></i>
         </button>
 
-        <div class="slider sl2" id="mySliderTrending">
-          <div class="movie" id="main2" th:each="element : ${trending}">
-            <a class="image" th:href="@{/movie/{id}(id=${element.key})}">
-              <img
-                loading="lazy"
-                class="img-mb"
-                th:src="@{${'https://image.tmdb.org/t/p/w220_and_h330_face/' + element.value}}"
-                alt=""
-              />
-            </a>
-          </div>
-        </div>
+        <div class="slider sl2" id="mySliderTrending"></div>
         <button type="button" id="moveRight2" class="btn-nav">
           <i class="fa-solid fa-caret-right"></i>
         </button>
@@ -284,7 +273,6 @@
           <div id="container-yt" class="modal-body ratio ratio-16x9 mt-4">
             <iframe
               id="video-yt"
-              loading="lazy"
               class=""
               width="560"
               height="315"
