--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -286,7 +286,9 @@
         </div>
       </div>
     </div>
-
+    <div class="container-fluid">
+      <div class="container pippo"></div>
+    </div>
     <footer class="">
       <!--fixed-bottom-->
       <div class="container-fluid">
