--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -80,7 +80,7 @@
             <p class="pb-4 back-err pt-3">
               Torna alla home c'è molto da scoprire
             </p>
-            <a th:href="https://kaisenweb.herokuapp.com/"
+            <a href="/"
               ><button type="button" class="btn btn-primary btn-err">
                 HOME
               </button></a
