--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -273,6 +273,7 @@
           <div id="container-yt" class="modal-body ratio ratio-16x9 mt-4">
             <iframe
               id="video-yt"
+              loading="lazy"
               class=""
               width="560"
               height="315"
@@ -286,9 +287,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid">
-      <div class="container pippo"></div>
-    </div>
+    <div class="container-fluid"></div>
     <footer class="">
       <!--fixed-bottom-->
       <div class="container-fluid">
