--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -220,3 +220,6 @@ h1.matter:hover {
   background-color: red !important;
   height: 400px !important;
 }
+.img-mb {
+  transform: translateZ(0) !important;
+}
