--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -319,6 +319,7 @@
     <script src="assets/js/carousel.js"></script>
     <script src="assets/js/custom.js"></script>
     <script src="assets/js/load.js"></script>
+    <style></style>
     <script src="assets/js/country-states.js"></script>
     <script
       src="https://kit.fontawesome.com/f85002145c.js"
